objects/Student__c.object
<CustomObject>
    <label>Student</label>
    <nameField>
        <displayFormat>St-{000}</displayFormat>
        <label>Student Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subjects__c</fullName>
        <description>Maths
English</description>
        <label>Subjects</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telugu</fullName>
                </value>
                <value>
                    <fullName>Kanada</fullName>
                </value>
                <value>
                    <fullName>Tamil</fullName>
                </value>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_Enrol__c</fullName>
        <label>Class Enrol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Student Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_type__c</fullName>
        <label>Student Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Tamil</fullName>
        <active>true</active>
        <label>Tamil</label>
    </recordTypes>
    <recordTypes>
        <fullName>Kanada</fullName>
        <active>true</active>
        <label>Kanada</label>
    </recordTypes>
    <recordTypes>
        <fullName>Telugu</fullName>
        <active>true</active>
        <label>Telugu</label>
    </recordTypes>
</CustomObject>